[package]
name = "pgp-tester-shared-libs"
version = "0.1.0"
edition = "2024"


[dependencies]
sha2 = "0.10.9"
hex = "0.4.3"
miette = "7.6.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
pgp = "0.18.0"
chrono = "0.4.42"
tracing = { version = "0.1.44", optional = true }
bytes = "1.11.1"

[features]
tracing = ["dep:tracing"]
